--- a/dada/extras/documentation/pod_source/features-dada_mail_installer.pod
+++ b/dada/extras/documentation/pod_source/features-dada_mail_installer.pod
@@ -40,7 +40,9 @@ Once the installer is out of beta, we'll be moving the below instructions to a m
 
 Here's the direct download to Dada Mail v4.2.0 Beta 2: 
 
-L<http://github.com/downloads/justingit/dada-mail/dada-4_2_0-beta2.tar.gz>
+L<http://github.com/justingit/dada-mail/raw/e6c4898671da30704d4200a1ae400cfae7c40b13/uncompress_dada.cgi>
+
+(long, gruesome URL, we know!) 
 
 Save the distribution to your Desktop Computer (you will not have to uncompress the distro) and then upload the, tar.gz file to your hosting account's I<cgi-bin>. 
 
