--- a/dada/extras/documentation/pod_source/FAQ-basic_2_advanced_installation.pod
+++ b/dada/extras/documentation/pod_source/FAQ-basic_2_advanced_installation.pod
@@ -1,44 +1,54 @@
 =pod
 
-=head1 Basic Installation to Advanced Installation
+=head1 Basic Installation to a Contemporary Installation
+
+=head1 Terminology Changes
+
+Since v4.2.0 of Dada Mail, we no longer suggest, or support doing a B<Basic> Installation of Dada Mail. 
+
+The, B<Advanced> Installation of Dada Mail is now just known as a, B<Manual Installation> of Dada Mail. 
+
+Dada Mail v4.2.0 ships with the Dada Mail Installer to help automate the installation and configuration of Dada Mail. 
+
+The method that the Dada Mail Installer sets things up will be the same as how our Manual Installation instructions work - it just automates it all.  
 
 =head1 Introduction
 
-For many reasons, you may want to upgrade, while also switching a Basic Installation to an Advanced Installation. A big reason being, since v4.2.0 of Dada Mail, 
-we don't recommend performing a basic installation. 
+If you initially installed Dada Mail using our Basic Installation instructions, you'll need to change configuration to use the more contemporary 
+configuration. The Basic Installation instructions are not currently supported. 
 
 A B<Basic Installation> means simply changing the first four variables in the C<Config.pm> file itself. One of these variables is the C<$FILES> variable, 
 which is set to a directory where B<all> the files/directories Dada Mail creates that represent a Mailing List in Dada Mail are stored. 
 
-An B<Advanced Installation> is an installation where only one variable in the C<Config.pm> file is changed, called, C<$PROGRAM_CONFIG_FILE_DIR> and putting all other configuration changes in an outside configuration file called, C<.dada_config>. 
+Contemporary installations of Dada Mail need only one variable in the C<Config.pm> file changed. This variable is called. C<$PROGRAM_CONFIG_FILE_DIR>. All other configuration changes are put in an outside configuration file called, C<.dada_config>. 
 
-The Advanced Installation also uses a different directory structure for the files Dada Mail creates. 
+Contemporary installation also uses a different directory structure for the file
 
-Instructions on installing Dada Mail using an Advanced installation can be found here: 
+The instructions below will try to guide you from changing between and Basic and Contemporary Installation. 
 
-http://dadamailproject.com/installation/installation_advanced.html
-
-The instructions below will try to guide you from changing between and Basic and Advanced Installation. 
-
-What we suggest is that you do this during an upgrade, by first installing the new version of Dada Mail using an advanced installation and then moving over the files from the old installation into the directory structure of the advanced installation.
+What we suggest is that you perform this change during an upgrade, by first installing the new version of Dada Mail using the Dada Mail Installer, or the Manual Installation instructions and then moving over the files from the old installation into the directory structure of the new installation.
 
 =head2 Find the $FILES directory
 
-Before performing an advanced installation for your new Dada Mail, find the directory used for the, C<$FILES> variable in your old installation. 
+Before performing a installation for your new Dada Mail, find the directory used for the, C<$FILES> variable in your I<old> installation. 
 
 This directory should hold most all the files/directories that represent your Mailing Lists. 
 
-=head2 Install Dada Mail using the Advanced Installation Method
+=head2 Install Dada Mail
 
-Instructions on how to do so can be found here: 
+You may either use the Dada Mail Installer (preferred): 
+	
+L<http://dadamailproject.com/support/documentation-4_2_0-rc1/features-dada_mail_installer.pod.html>
 
-http://dadamailproject.com/installation/installation_advanced.html
+Or Manually install Dada Mail (more difficult) 
+
+L<http://dadamailproject.com/installation/installation_advanced.html>
 
 Once you've done the install/upgrade, you probably won't see any of your old lists yet. This is OK. 
 
 =head2 Move Old Files over to the New Directory Structure
 
-The advanced installation method should leave you with a directory struture within your  C<.dada_files> directory that looks like this: 
+The new installation should leave you with a directory struture within your  C<.dada_files> directory that looks like this: 
 
 	.archives
 	.backups
@@ -50,18 +60,22 @@ The advanced installation method should leave you with a directory struture with
 
 All that's needed now to do is to move your old files in the old directory (saved in the old C<$FILES> location into this new directory structure: 
 
-Any B<directories> named after the B<list short name> are probably backups. Move those into, C<.backups>
+=over 
 
-Any B<files> that start with, C<mj-> and end in, C<archives> are archives.  Move those files into, C<.archives>
+=item * Any B<directories> named after the B<list short name> are probably backups. Move those into, C<.backups>
 
-Any B<other files> that start with C<mj-> are your list settings.  Move those files into, C<.lists>
+=item * Any B<files> that start with, C<mj-> and end in, C<archives> are archives.  Move those files into, C<.archives>
 
-Any files that end in, C<.list>, or C<black_list>, or something similar, basically: a dot (C<.>), (something else) and then, C<list> are your subscribers. Move those files into, C<.lists>
+=item * Any B<other files> that start with C<mj-> are your list settings.  Move those files into, C<.lists>
 
-Any B<file> with the ending of, C<.txt> or, C<.log> are probably logs,  Move those files into, C<.logs>
+=item * Any files that end in, C<.list>, or C<black_list>, or something similar, basically: a dot (C<.>), (something else) and then, C<list> are your subscribers. Move those files into, C<.lists>
 
-Any B<file> that ends in, C<.template> goes in, C<.templates>
+=item * Any B<file> with the ending of, C<.txt> or, C<.log> are probably logs,  Move those files into, C<.logs>
 
-Most anything else is probably a temporary file, you may put them into, C<.tmp> and when you're sure they're not useful, you may remove them.
+=item * Any B<file> that ends in, C<.template> goes in, C<.templates>
+
+=item * Most anything else is probably a temporary file, you may put them into, C<.tmp> and when you're sure they're not useful, you may remove them.
+
+=back
 
 =cut
